samples/_failures_safe/1761311596_68f12a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6715b45.c: In function ‘main’:
./samples/SAFE/__tmp_b6715b45.c:162:19: error: expected ‘;’ at end of input
  162 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_b6715b45.c:162:13: error: expected declaration or statement at end of input
  162 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_b6715b45.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b6715b45.c:162:13: error: expected declaration or statement at end of input
